<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/intro_page_layout"
        android:layout_marginBottom="48dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/phone_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/get_phone"
        android:textColor="@color/white"
        android:textSize="17pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone number"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconDrawable="@drawable/ic_check"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:helperText="Required"
        app:helperTextTextColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:prefixText="+977"
        app:startIconDrawable="@drawable/nepal"
        app:startIconTint="#F44336">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_to_get_started"
            android:textColor="@color/white"
            android:background="@drawable/back_btn"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/back" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_to_otp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:background="@drawable/back_btn"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/ic_green"
            android:text="@string/next" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>